--- a/qlthucung/Views/Admin/Index.cshtml
+++ b/qlthucung/Views/Admin/Index.cshtml
@@ -1,165 +1,104 @@
-﻿@model PaginatedList<SanPham>
-
-@{
+﻿@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<style>
+    .d-flex {
+        display: -ms-flexbox !important;
+        display: flex !important;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+</style>
+<div class="stats">
+    <div class="p-3 d-flex">
+        <div class="w-100">
+            <div class="small-box bg-success m-auto">
+                <div class="inner p-5">
+                    <h3>@String.Format("{0:N0}", @ViewBag.TongDoanhThu) VND</h3>
 
-<div class="col-lg-12 padding-10">
-    <h1>Dashboard</h1>
-
-    <section class="content">
-        <div class="row">
-            <div class="col-lg-3 col-6">
-                <!-- small box -->
-                <div class="small-box bg-success">
-                    <div class="inner">
-                        <h3>@String.Format("{0:N0}", @ViewBag.TongDoanhThu)</h3>
-
-                        <p>Tổng Doanh Thu</p>
-                    </div>
-                    <div class="icon">
-                        <i class="ion-social-usd-outline"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                    <h4>Tổng doanh thu</h4>
                 </div>
-            </div>
-                
-            <div class="col-lg-3 col-6">
-                    
-                <div class="small-box bg-primary">
-                    <div class="inner">
-                        <h3>@ViewBag.ThongKeDonHang</h3>
-
-                        <p>Tổng Đơn Hàng</p>
-                    </div>
-                    <div class="icon">
-                        <i class="ion-android-cart"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                <div class="icon">
+                    <i class="ion-social-usd-outline"></i>
                 </div>
+                <a href="#" class="small-box-footer"></a>
             </div>
-                
-            <div class="col-lg-3 col-6">
-                   
-                <div class="small-box bg-danger">
-                    <div class="inner">
-                        <h3>@ViewBag.ThongKeKH</h3>
-
-                        <p>Thành Viên</p>
-                    </div>
-                    <div class="icon">
-                        <i class="ion-ios-people"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                </div>
-            </div>
-                
-            <div class="col-lg-3 col-6">
-                    
-                <div class="small-box bg-secondary">
-                    <div class="inner">
-                        <h3>@ViewBag.ThongKeSL</h3>
-
-                        <p>Sản phẩm</p>
-                    </div>
-                    <div class="icon">
-                        <i class="ion ion-eye"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                </div>
-            </div>
-                
         </div>
-    </section>
+        <div class="w-100">
+            <div class="small-box bg-primary m-auto">
+                <div class="inner p-5">
+                    <h3>@ViewBag.ThongKeDonHang đơn</h3>
 
-    <p>
-        <a class="btn btn-primary" asp-action="Create">Thêm sản phẩm</a>
-    </p>
-
-    <form method="post" asp-controller="Admin" asp-action="Index">
-        <b class="pr-2">Tìm kiếm theo tên</b>
-
-        <div class="d-flex align-items-center">
-            <input id="search" name="search" required type="text" class="form-control mr-1">
-
-            <input type="submit" value="Search" class="btn btn-danger" />
-
+                    <h4>Tổng Đơn Hàng</h4>
+                </div>
+                <div class="icon">
+                    <i class="ion-android-cart"></i>
+                </div>
+                <a href="#" class="small-box-footer"></a>
+            </div>
         </div>
-    </form>
+    </div>
+    <div class="p-3 d-flex">
+        <div class="w-100">
+            <div class="small-box bg-danger m-auto">
+                <div class="inner p-5">
+                    <h3>@ViewBag.ThongKeKH người</h3>
 
-    <div class="body fix-width scroll-inner">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>tên sản phẩm</th>
-                    <th>hình</th>
-                    <th>giá gốc</th>
-                    <th>giảm giá</th>
-                    <th>số lượng tồn</th>
-                    <th>giá km</th>
-                    <th>ngày cập nhập</th>
-                    <th>Chức năng</th>
-                </tr>
-            </thead>
+                    <h4>Số lượng thành Viên</h4>
+                </div>
+                <div class="icon">
+                    <i class="ion-ios-people"></i>
+                </div>
+                <a href="#" class="small-box-footer"></a>
+            </div>
+        </div>
+        <div class="w-100">
+            <div class="small-box bg-secondary m-auto">
+                <div class="inner p-5">
+                    <h3>@ViewBag.ThongKeSL</h3>
 
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Tensp)
-                        </td>
-                        <td>
-                            <img src=" @Html.DisplayFor(modelItem => item.Hinh)" height="100" />
-                        </td>
-                        <td>
-                            @string.Format("{0:N0}", item.Giaban)
-                        </td>
-                        <td>@Html.DisplayFor(modelItem => item.Giamgia)</td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Soluongton)
-                        </td>
-                        <td>@string.Format("{0:N0}", item.Giakhuyenmai)</td>
-                        <td>
-                            @item.Ngaycapnhat
-                        </td>
-                        <td>
-                            <a asp-action="Details" asp-route-id="@item.Masp" class="text-primary f2"><i class="fa-solid fa-eye"></i></a>
-                            <a asp-action="Edit" asp-route-id="@item.Masp" class="text-primary f2"><i class="fas fa-edit"></i></a>
-                            <a asp-action="Delete" asp-route-id="@item.Masp" class="text-primary f2"><i class="fa-solid fa-trash-can"></i></a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-
-        <!--Pagination-->
-        <ul class="pagination justify-content-center" style="margin: 10px auto;">
-            @if (Model.HasPreviousPage)
-            {
-                <li class="page-item"><a class="page-link" href="@Url.Action("Index", new { pageNumber = Model.PageIndex - 1 })">Previous</a></li>
-            }
-
-            @for (int i = 1; i <= Model.TotalPages; i++)
-            {
-                if (i == Model.PageIndex)
-                {
-                    <li class="page-item active"><a href="" class="page-link"> @i</a></li>
-                }
-                else
-                {
-                    <li class="page-item"><a class="page-link" href="@Url.Action("Index", new { pageNumber = i })">@i</a></li>
-                }
-            }
-
-            @if (Model.HasNextPage)
-            {
-                <li class="page-item"><a class="page-link" href="@Url.Action("Index", new { pageNumber = Model.PageIndex + 1 })">Next</a></li>
-            }
-        </ul>
-
+                    <h4>Số lượng sản phẩm</h4>
+                </div>
+                <div class="icon">
+                    <i class="ion ion-eye"></i>
+                </div>
+                <a href="#" class="small-box-footer"></a>
+            </div>
+        </div>
     </div>
 </div>
 
+<!-- Thêm jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Thêm Chart.js -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<canvas id="chart"></canvas>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+    $(document).ready(function () {
+        $.ajax({
+            url: '/Admin/ThongKeDoanhThu', // Đường dẫn đến Controller
+            type: 'GET',
+            success: function (data) {
+                var ctx = document.getElementById('chart').getContext('2d');
+                var chart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: ['Hôm nay', 'Tuần', 'Tháng'],
+                        datasets: [{
+                            label: 'Doanh thu (VND)',
+                            data: [data.revenueToday, data.revenueWeek, data.revenueMonth],
+                            backgroundColor: ['orange', 'gray', 'black']
+                        }]
+                    }
+                });
+            }
+        });
+    });
+</script>
 
