--- a/qlthucung/Views/DonHangs/ChiTietDonHang.cshtml
+++ b/qlthucung/Views/DonHangs/ChiTietDonHang.cshtml
@@ -40,19 +40,19 @@
 </style>
 
 <div class="body ViewPrint" style="margin-top: 15px;">
-    <h3 class="text-title">Thông tin đơn hàng</h3>
+    <h3 class="text-title">Thông tin đơn hàng @ViewBag.Madon</h3>
     <ul class="col-md-12 d-flex pb-4 py-3 text-dark" style="font-style: oblique; list-style: none; justify-content: space-between; padding-inline: 4%;">
-        @foreach (var m in ViewBag.ViewChiTietDH2)
-        {
-            <li class="col-md-6 text-start text-left">
-                <div>Họ tên: @m.khachhang.Hoten</div>
-                <div>Email: @m.khachhang.Email</div>
-            </li>
-            <li class="col-md-6 text-end text-left">
-                <div>Địa chỉ: @m.khachhang.Diachi</div>
-                <div>Số điện thoại: @m.khachhang.Dienthoai</div>
-            </li>
-        }
+        <li class="col-md-6 text-start text-left">
+            <div>Ngày đặt: @ViewBag.Ngaydat</div>
+            <div>Mã giao dịch: @ViewBag.MaGiaoDich</div>
+        </li>
+        <li class="col-md-6 text-end text-left">
+            <div>Họ tên: @ViewBag.TenKhachHang</div>
+            <div>Email: @ViewBag.Email</div>
+            <div>Tên đăng nhập: @ViewBag.TenDangNhap</div>
+            <div>Địa chỉ: @ViewBag.Diachi</div>
+            <div>Số điện thoại: @ViewBag.SoDienThoai</div>
+        </li>
     </ul>
     <h2 class="py-2 text-center">Chi tiết sản phẩm</h2>
 
@@ -87,7 +87,7 @@
                         @item.sanpham.Giamgia %
                     </td>
                     <td>
-                        @string.Format("{0:N0}", item.sanpham.Giakhuyenmai  * item.ctdh.Soluong) vnđ
+                        @string.Format("{0:N0}", item.sanpham.Giakhuyenmai * item.ctdh.Soluong) vnđ
                     </td>
 
                     <td>
@@ -114,7 +114,15 @@
             </div>
         </div>
     }
-
+    <div class="d-flex justify-content-between px-3">
+        <div>Hình thức thanh toán: @ViewBag.Thanhtoan</div>
+        <div>Tình trạng đơn hàng: @ViewBag.Giaohang</div>
+    </div>
+    <div class="px-3">Trạng thái thanh toán: @ViewBag.TrangThaiThanhToan</div>
+    @if (ViewBag.TrangThaiThanhToan == "Đã hủy")
+    {
+        <div class="px-3">Lý do hủy đơn: @ViewBag.TinNhanTraVe</div>
+    }
 
 </div>
 
