--- a/qlthucung/Views/Admin/QLChiTietDonHang.cshtml
+++ b/qlthucung/Views/Admin/QLChiTietDonHang.cshtml
@@ -1,66 +1,126 @@
-﻿@model qlthucung.Models.DonHang
+﻿@model qlthucung.Models.ChiTietDonHangViewModel
 
 @{
     ViewData["Title"] = "QLChiTietDonHang";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="row" style="margin: 50px 0;">
-    <div class="col-md-4">
-        <form asp-action="QLChiTietDonHang">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<form asp-action="QLChiTietDonHang" method="post">
+    @Html.AntiForgeryToken()
+    <div class="row p-4">
+        <div class="col-lg-4 col-md-12">
+            <input type="hidden" asp-for="DonHang.Madon" />
+
             <div class="form-group">
-                <label asp-for="Madon" class="control-label"></label>
-                <span> @Model.Madon</span>
-                <input type="hidden" asp-for="Madon" />
+                <label>Mã đơn:</label>
+                <span>@Model.DonHang.Madon</span>
             </div>
 
             <div class="form-group">
-                <label asp-for="Makh" class="control-label"></label>
-                <span> @Model.Makh</span>
-                <input type="hidden" asp-for="Makh" />
+                <label>Tên khách hàng:</label>
+                <span>@Model.KhachHang.Hoten</span>
+                <input type="hidden" asp-for="KhachHang.Makh" />
             </div>
-            <div class="form-group">
-                <label asp-for="Thanhtoan" class="control-label"></label>
-                <input asp-for="Thanhtoan" class="form-control" disabled />
-                <span asp-validation-for="Thanhtoan" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Giaohang" class="control-label"></label>
-                @*<input asp-for="Giaohang" class="form-control" />*@
 
-                <select asp-for="Giaohang" id="cars" class="form-control">
-                    <option checked>@Model.Giaohang</option>
-                    <option value="chờ xử lý">1 - chờ xử lý</option>
-                    <option value="đang xử lý">2 - đang xử lý</option>
-                    <option value="đang giao">3 - đang giao</option>
-                    <option value="giao thành công">4 - giao thành công</option>
-                    <option value="hủy">5 - hủy</option>
+            <div class="form-group">
+                <label>Tên tài khoản:</label>
+                <span>@Model.KhachHang.Tendangnhap</span>
+            </div>
+
+            <div class="form-group">
+                <label>Địa chỉ:</label>
+                <span>@Model.KhachHang.Diachi</span>
+            </div>
+
+            <div class="form-group">
+                <label>Số điện thoại:</label>
+                <span>@Model.KhachHang.Dienthoai</span>
+            </div>
+
+            <div class="form-group">
+                <label>Phương thức thanh toán:</label>
+                <span>@Model.DonHang.Thanhtoan</span>
+            </div>
+        </div>
+
+        <div class="col-lg-8 col-md-12">
+            <div class="form-group">
+                <label>Trạng thái thanh toán:</label>
+                @if(Model.DonHang.Thanhtoan == "COD")
+                {
+                    <select class="form-control" asp-for="GiaoDich.Trangthaithanhtoan" asp-items="ViewBag.TrangThaiThanhToan">
+                        <option value="null">-- Chọn trạng thái --</option>
+                    </select>
+                }
+                else
+                {
+                    <input class="form-control" value="@Model.GiaoDich?.Trangthaithanhtoan" disabled />
+                }
+            </div>
+
+            <div class="form-group">
+                <label for="DonHang_Giaohang">Trạng thái giao hàng:</label>
+                <select class="form-control" asp-for="DonHang.Giaohang" asp-items="ViewBag.TrangThaiGiaoHang">
+                    <option value="null">-- Chọn trạng thái --</option>
                 </select>
+            </div>
 
-                <span asp-validation-for="Giaohang" class="text-danger"></span>
-            </div>
             <div class="form-group">
-                <label asp-for="Ngaydat" class="control-label"></label>
-                <div class="form-control">@Model.Ngaydat</div>
-                <span asp-validation-for="Ngaydat" class="text-danger"></span>
+                <label>Ngày đặt:</label>
+                <input class="form-control" value="@Model.DonHang.Ngaydat?.ToString("dd/MM/yyyy")" disabled />
             </div>
+
             <div class="form-group">
-                <label asp-for="Ngaygiao" class="control-label"></label>
-                <input asp-for="Ngaygiao" class="form-control" />
-                <span asp-validation-for="Ngaygiao" class="text-danger"></span>
+                <label for="DonHang_Ngaygiao">Ngày giao:</label>
+                <input class="form-control" asp-for="DonHang.Ngaygiao" type="date" />
             </div>
-            <div class="form-group">
-                <input type="submit" value="Lưu" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
+
+    <div class="form-group">
+        <center><input type="submit" value="Lưu" class="btn btn-primary w-75" /></center>
+    </div>
+</form>
+
+<form>
+    <div class="card mt-3 p-3">
+        <h2 class="py-2 text-center">Chi tiết sản phẩm</h2>
+        <div class="fix-width scroll-inner">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Tên sản phẩm</th>
+                        <th>Hình</th>
+                        <th>Số lượng</th>
+                        <th>Giá</th>
+                        <th>Tổng giá</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.ChiTietDonHangs)
+                    {
+                        <tr>
+                            <td>@item.SanPham.Tensp</td>
+                            <td><img src="@item.SanPham.Hinh" height="100px" /></td>
+                            <td>@item.ChiTiet.Soluong</td>
+                            <td>@($"{item.ChiTiet.Gia:N0} đ")</td>
+                            <td>@($"{item.ChiTiet.Soluong * item.ChiTiet.Gia:N0} đ")</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <center>
+        <a asp-action="QLDonHang" class="btn btn-primary w-75 mt-3">Back to List</a>
+    </center>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
