--- a/qlthucung/Views/Checkout/PaymentCallbackVnpay.cshtml
+++ b/qlthucung/Views/Checkout/PaymentCallbackVnpay.cshtml
@@ -47,7 +47,7 @@
             <b>Số tiền:</b> @Model.Amount
         </div>
         <div class="product__cart justify-content-end">
-            <center><button class="product__cart-add" asp-action="Details" asp-controller="DonHangs">Lịch sử đơn hàng đã đặt</button></center>
+            <center><button formmethod="get" class="product__cart-add" asp-action="Details" asp-controller="DonHangs">Lịch sử đơn hàng đã đặt</button></center>
         </div>
     </div>
 </div>
