--- a/qlthucung/Views/Admin/Create.cshtml
+++ b/qlthucung/Views/Admin/Create.cshtml
@@ -73,6 +73,6 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="ListDanhMuc">Back to List</a>
     </div>
 </div>
