--- a/qlthucung/Views/Admin/Details.cshtml
+++ b/qlthucung/Views/Admin/Details.cshtml
@@ -76,7 +76,7 @@
     </div>
     <div>
         <a asp-action="Edit" asp-route-id="@Model.Masp">Edit</a> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="ListDanhMuc">Back to List</a>
     </div>
 
 </div>
