--- a/qlthucung/Views/Admin/Edit.cshtml
+++ b/qlthucung/Views/Admin/Edit.cshtml
@@ -77,7 +77,7 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="ListDanhMuc">Back to List</a>
     </div>
 </div>
 
