--- a/qlthucung/Views/Admin/ListDanhMucSP.cshtml
+++ b/qlthucung/Views/Admin/ListDanhMucSP.cshtml
@@ -5,7 +5,7 @@
 }
 <h2 class="pl-2">Danh Mục</h2>
 <p class="pl-2">
-    <a class="btn btn-primary" asp-action="Create">Thêm danh mục</a>
+    <a class="btn btn-primary" asp-action="CreateDM">Thêm danh mục</a>
 </p>
 <!-- Form để lọc theo ParentName và tìm kiếm theo tendanhmuc -->
 <form method="get">
