--- a/qlthucung/Views/Admin/QLDonHang.cshtml
+++ b/qlthucung/Views/Admin/QLDonHang.cshtml
@@ -1,10 +1,9 @@
-﻿@model PaginatedList<DonHang>
+﻿@model qlthucung.Models.PaginatedList<qlthucung.Models.DonHangGiaoDichViewModel>
 
 @{
     ViewData["Title"] = "QLDonHang";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
 <div class="col-lg-12 padding-8">
     @*<div class="d-flex justify-content-between">
     <h2>Quản lý đơn hàng</h2>
@@ -20,22 +19,14 @@
     <div class="body fix-width scroll-inner" style="margin: 50px 0;">
         <table class="table table-striped">
             <tr>
-                <th>
-                    Mã kh
-                </th>
-                <th>
-                    Thanh toán
-                </th>
-                <th>
-                    Trạng thái
-                </th>
-                <th>
-                    Ngày đặt
-                </th>
-                <th>
-                    Ngày giao
-                </th>
-
+                <th>Tên đăng nhập</th>
+                <th>Họ tên</th>
+                <th>Mã đơn</th>
+                <th>Phương thức thanh toán</th>
+                <th>Trạng thái thanh toán</th>
+                <th>Trạng thái giao hàng</th>
+                <th>Ngày đặt</th>
+                <th>Ngày giao</th>
                 <th></th>
             </tr>
 
@@ -43,47 +34,75 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Makh)
+                        @Html.DisplayFor(modelItem => item.KhachHang.Tendangnhap)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Thanhtoan)
+                        @Html.DisplayFor(modelItem => item.KhachHang.Hoten)
                     </td>
                     <td>
-                        @if (item.Giaohang == "chờ xử lý")
+                        @Html.DisplayFor(modelItem => item.DonHang.Madon)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DonHang.Thanhtoan)
+                    </td>
+                    <td>
+                        @if (item.GiaoDich != null)
                         {
-                            <div style="color: #007bff;">@item.Giaohang</div>
+                            if (item.GiaoDich.Trangthaithanhtoan == "Đã thanh toán")
+                            {
+                                <div style="color: gray;">@item.GiaoDich.Trangthaithanhtoan</div>
+                            }
+                            else if (item.GiaoDich.Trangthaithanhtoan == "Chưa thanh toán")
+                            {
+                                <div style="color: red;">@item.GiaoDich.Trangthaithanhtoan</div>
+                            }
+                            else
+                            {
+                                @item.GiaoDich.Trangthaithanhtoan
+                            }
                         }
-                        else if (item.Giaohang == "đang xử lý")
+                        else
                         {
-                            <div style="color: orange;">@item.Giaohang</div>
-                        }
-                        else if (item.Giaohang == "đang giao")
-                        {
-                            <div style="color: forestgreen;">@item.Giaohang</div>
-                        }
-                        else if (item.Giaohang == "giao thành công")
-                        {
-                            <div style="color: green;">@item.Giaohang</div>
-                        }
-                        else if (item.Giaohang == "hủy")
-                        {
-                            <div style="color: red;">@item.Giaohang</div>
+                            <div style="color: red;">Chưa thanh toán</div>
                         }
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Ngaydat)
+                        @if (item.DonHang.Giaohang == "chờ xử lý")
+                        {
+                            <div style="color: #007bff;">@item.DonHang.Giaohang</div>
+                        }
+                        else if (item.DonHang.Giaohang == "đang xử lý")
+                        {
+                            <div style="color: orange;">@item.DonHang.Giaohang</div>
+                        }
+                        else if (item.DonHang.Giaohang == "đang giao")
+                        {
+                            <div style="color: forestgreen;">@item.DonHang.Giaohang</div>
+                        }
+                        else if (item.DonHang.Giaohang == "giao thành công")
+                        {
+                            <div style="color: plum;">@item.DonHang.Giaohang</div>
+                        }
+                        else if (item.DonHang.Giaohang == "Đã hủy")
+                        {
+                            <div style="color: red;">@item.DonHang.Giaohang</div>
+                        }
+                        else if (item.DonHang.Giaohang == "đã hoàn thành")
+                        {
+                            <div style="color: gray;">@item.DonHang.Giaohang</div>
+                        }
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Ngaygiao)
+                        @Html.DisplayFor(modelItem => item.DonHang.Ngaydat)
                     </td>
-
                     <td>
-                        <a asp-action="QLChiTietDonHang" asp-route-id="@item.Madon">Chi tiết đơn hàng</a>
-                        @*<a href="@Url.Action("Delete", new { id = item.madon })" class="text-primary f2"><i class="fa-solid fa-trash-can"></i></a>*@
+                        @Html.DisplayFor(modelItem => item.DonHang.Ngaygiao)
+                    </td>
+                    <td>
+                        <a asp-action="QLChiTietDonHang" asp-route-id="@item.DonHang.Madon">Chi tiết đơn hàng</a>
                     </td>
                 </tr>
             }
-
         </table>
     </div>
 
