--- a/qlthucung/Views/Security/SignIn.cshtml
+++ b/qlthucung/Views/Security/SignIn.cshtml
@@ -22,7 +22,6 @@
                         {
                             <div class="alert alert-danger">@TempData["LoginErr"]</div>
                         }
-
                         <h3 class="heading text-center">Đăng nhập</h3>
                         <div class="col-md-12 col-lg-12 col-sm-12 d-flex pt-2" style="position: relative;">
                             <div class="m-auto text-center div-light align-items-center w-100">
@@ -63,11 +62,12 @@
                                 Ghi nhớ mật khẩu
                             </label>
                         </div>
-
+                        <div class="form-group dont-have-account text-center">
+                            <a class="account-register text-center" asp-controller="RoleAdmin" asp-action="ForgotPassword">Quên mật khẩu</a>
+                        </div>
                         <div class="form-group">
                             <button type="submit" class="btn form-control rounded submit px-3 btn_login form-submit pt-1 pb-1" value="Login" name="login_submit">Đăng nhập</button>
                         </div>
-
                         <div class="form-group dont-have-account text-center">
                             <span class="text-center">Bạn chưa có tài khoản?</span>
                             <a class="account-register text-center" asp-controller="Security" asp-action="Register">Đăng ký ngay</a>
